unpackaged/main/default/objects/ET_Refund__c/ET_Refund__c.object-meta.xml
<CustomObject>
    <label>Refund</label>
    <nameField>
        <displayFormat>REF-{00000}</displayFormat>
        <label>Refund Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>