unpackaged/main/default/objects/ET_Refund__c/fields/Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address__c</fullName>
    <formula>ET_Service_Request__r.ET_Account__r.ET_Bank_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Address</label>
    <type>Text</type>
</CustomField>