unpackaged/main/default/objects/ET_Refund__c/fields/ET_Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>ET_Authorization_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorization Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>