unpackaged/main/default/objects/ET_Refund__c/fields/ET_Customer__c.field-meta.xml
<CustomField>
    <fullName>ET_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>ET_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>