unpackaged/main/default/objects/ET_Refund__c/fields/ET_Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>ET_Integration_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>