unpackaged/main/default/objects/ET_Refund__c/fields/ET_Payment__c.field-meta.xml
<CustomField>
    <fullName>ET_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>ETST_Payment__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>