unpackaged/main/default/objects/ET_Refund__c/fields/ET_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>ET_Refund_Amount__c</fullName>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>