unpackaged/main/default/objects/ET_Refund__c/fields/ET_Refund_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ET_Refund_Percentage__c</fullName>
    <label>Refund Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>