unpackaged/main/default/objects/ET_Refund__c/fields/ET_Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>ET_Refund_Status__c</fullName>
    <label>Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Process Refund NextDay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>