unpackaged/main/default/objects/ET_Refund__c/fields/ET_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>ET_Service_Request__c</fullName>
    <label>Service Request</label>
    <referenceTo>ET_Service_Request__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>ET_Refunds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>