unpackaged/main/default/objects/ET_Refund__c/fields/ETC_Vehicle_Booking__c.field-meta.xml
<CustomField>
    <fullName>ETC_Vehicle_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Booking</label>
    <referenceTo>ETCAR_Service_Request_Line_Item__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>