unpackaged/main/default/objects/ET_Refund__c/fields/ETI_Booking__c.field-meta.xml
<CustomField>
    <fullName>ETI_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>ETI_Booking__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>ET_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>