unpackaged/main/default/objects/ET_Refund__c/recordTypes/Car_Services_Refund_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Car_Services_Refund_Record_Type</fullName>
    <active>true</active>
    <label>Car Services Refund Record Type</label>
</RecordType>