unpackaged/main/default/objects/ET_Refund__c/recordTypes/ETST_School_Refund_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>ETST_School_Refund_Record_Type</fullName>
    <active>true</active>
    <label>School Refund Record Type</label>
</RecordType>