unpackaged/main/default/objects/ET_Refund__c/recordTypes/Vehicle_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Inspection</fullName>
    <active>true</active>
    <label>Vehicle Inspection</label>
</RecordType>