unpackaged/main/default/objects/ET_Refund__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETI_Booking__c</columns>
    <columns>ET_Service_Request__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ET_Refund_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>