unpackaged/main/default/objects/ET_Refund__c/listViews/School_Refund.listView-meta.xml
<ListView>
    <fullName>School_Refund</fullName>
    <columns>NAME</columns>
    <columns>ET_Service_Request__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>ET_Refund_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ET_Refund__c.ETST_School_Refund_Record_Type</value>
    </filters>
    <label>School Refund Requests</label>
    <language>en_US</language>
    <sharedTo />
</ListView>